--- a/shorten.html
+++ b/shorten.html
@@ -100,7 +100,26 @@
 </head>
 <body>
    <div class="container">
-      <h1>URL Shortener</h1>
+      <h1><p style="font-weight:bold;color:red;">URL Shortener</p></h1>
+      
+      
+			</br>
+	
+<center>	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- kolkotob_sidebar1_AdSense1_1x1_as -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9935930967042478"
+     data-ad-host="ca-host-pub-1556223355139109"
+     data-ad-host-channel="L0001"
+     data-ad-slot="2999405541"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>  </center>
+
+	</br>
       <div class="shorten">
          <h2>Shorten URL:</h2>
          <input type="text" spellcheck="false" placeholder="Enter URL to Shorten...">
